--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,6 @@
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
             <version>5.3.1</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.mashape.unirest</groupId>
@@ -67,7 +66,7 @@
                     <systemProperties>
                         <property>
                             <name>allure.results.directory</name>
-                            <value>${project.build.directory}/target/allure-results</value>
+                            <value>${project.build.directory}/target</value>
                         </property>
                     </systemProperties>
                 </configuration>
